--- a/website/companions/clara-oswald.html
+++ b/website/companions/clara-oswald.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -49,7 +50,11 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>Clara Oswald is a fictional character portrayed by Jenna-Louise Coleman in the long-running British science fiction television series Doctor Who. </p>
+					<p>First appearing in the show's seventh series, Clara is introduced as a companion of the eleventh incarnation of the alien time traveller known as the Doctor (portrayed by Matt Smith).</p>
+					<p>Over the course of 2012 and 2013, Clara is presented to the audience as three distinct, though similarly named, people. The first two incarnations each die during the episode in which they appear, while the third becomes the Doctor's companion.</p>
+				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
