--- a/website/companions/index.html
+++ b/website/companions/index.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -46,27 +47,6 @@
 						</tr>
 						<tr>
 							<td height="21"><a href="river-song.html">River Song</a></td>
-						</tr>
-					</table>
-					
-					<table width="152">
-						<tr>
-							<td><a href="../villains/daleks.html">Daleks</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/cybermen.html">Cybermen</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/the-master.html">The Master</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/lady-cassandra.html">Lady Cassandra</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/davros.html">Davros</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/weeping-angels.html">Weeping Angels</a></td>
 						</tr>
 					</table>
 					 </td>
