--- a/website/the-doctors/the-eighth-doctor.html
+++ b/website/the-doctors/the-eighth-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,9 +65,9 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-					<p>The <strong>Eighth Doctor</strong> is the eighth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series<em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by <a href="http://en.wikipedia.org/wiki/Paul_McGann" title="Paul McGann">Paul McGann</a>. Though he only appeared on television in one <a href="http://en.wikipedia.org/wiki/Doctor_Who_(1996_film)" title="Doctor Who (1996 film)">TV film</a>, his adventures are extensively portrayed in <a href="http://en.wikipedia.org/wiki/Doctor_Who_spin-offs" title="Doctor Who spin-offs">other media</a>.</p>
-					<p>Within the series' narrative, the Doctor is a centuries-old alien, a <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a>, who <a href="http://en.wikipedia.org/wiki/Time_travel_in_fiction" title="Time travel in fiction">travels in time and space</a> in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>.</p>
-					<p>When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body but in doing so gains a new physical appearance and with it, a distinct new personality. McGann portrays the eighth such incarnation, a passionate, enthusiastic, and eccentric character. His only companion in the television movie is <a href="http://en.wikipedia.org/wiki/Grace_Holloway" title="Grace Holloway">Grace Holloway</a> (<a href="http://en.wikipedia.org/wiki/Daphne_Ashbrook" title="Daphne Ashbrook">Daphne Ashbrook</a>), a medical doctor whose surgery is responsible for triggering his regeneration.</p>
+					<p>The Eighth Doctor is the eighth incarnation of the protagonist of the long-running BBC television science fiction seriesDoctor Who. He was portrayed by Paul McGann. Though he only appeared on television in one TV film, his adventures are extensively portrayed in other media.</p>
+					<p>Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in time and space in his TARDIS, frequently with companions.</p>
+					<p>When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality. McGann portrays the eighth such incarnation, a passionate, enthusiastic, and eccentric character. His only companion in the television movie is Grace Holloway (Daphne Ashbrook), a medical doctor whose surgery is responsible for triggering his regeneration.</p>
 				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
