--- a/website/the-doctors/the-fifth-doctor.html
+++ b/website/the-doctors/the-fifth-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,10 +65,10 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-    	<p>The <strong>Fifth Doctor</strong> is the fifth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He is portrayed by <a href="http://en.wikipedia.org/wiki/Peter_Davison" title="Peter Davison">Peter Davison</a>.</p>
-    	<p>Within the series' narrative, the Doctor is a centuries-old <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> alien from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who <a href="http://en.wikipedia.org/wiki/Time_travel_in_fiction" title="Time travel in fiction">travels in time and space</a> in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body; in doing so, his physical appearance and personality change.</p>
-    	<p>avison portrays the fifth such incarnation, a staunch pacifist with a vulnerable side and a tendency towards indecisiveness, dressed as a boyish <a href="http://en.wikipedia.org/wiki/Edwardian_era" title="Edwardian era">Edwardian</a> cricketer. He travelled with a host of companions, including boy genius <a href="http://en.wikipedia.org/wiki/Adric" title="Adric">Adric</a> (<a href="http://en.wikipedia.org/wiki/Matthew_Waterhouse" title="Matthew Waterhouse">Matthew Waterhouse</a>), alien aristocrat <a href="http://en.wikipedia.org/wiki/Nyssa_(Doctor_Who)" title="Nyssa (Doctor Who)">Nyssa</a> (<a href="http://en.wikipedia.org/wiki/Sarah_Sutton" title="Sarah Sutton">Sarah Sutton</a>) and Australian flight attendant <a href="http://en.wikipedia.org/wiki/Tegan_Jovanka" title="Tegan Jovanka">Tegan Jovanka</a> (<a href="http://en.wikipedia.org/wiki/Janet_Fielding" title="Janet Fielding">Janet Fielding</a>), whom he had travelled alongside in his previous incarnation.    </p>
-    <!-- InstanceEndEditable --></td>
+    	<p>The Fifth Doctor is the fifth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He is portrayed by Peter Davison.</p>
+    	<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
+    	<p>avison portrays the fifth such incarnation, a staunch pacifist with a vulnerable side and a tendency towards indecisiveness, dressed as a boyish Edwardian cricketer. He travelled with a host of companions, including boy genius Adric (Matthew Waterhouse), alien aristocrat Nyssa (Sarah Sutton) and Australian flight attendant Tegan Jovanka (Janet Fielding), whom he had travelled alongside in his previous incarnation.</p>
+    			<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
