--- a/website/the-doctors/the-seventh-doctor.html
+++ b/website/the-doctors/the-seventh-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,9 +65,9 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-					<p>The <strong>Seventh Doctor</strong> is the seventh <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series<em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by the actor <a href="http://en.wikipedia.org/wiki/Sylvester_McCoy" title="Sylvester McCoy">Sylvester McCoy</a>.</p>
-					<p>Within the series' narrative, the Doctor is a centuries-old <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> alien from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who travels in time and space in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
-					<p>McCoy portrays the seventh such incarnation, a whimsical, thoughtful character who quickly becomes more layered, secretive, and <a href="http://en.wikipedia.org/wiki/Psychological_manipulation" title="Psychological manipulation">manipulative</a>. His first companion was <a href="http://en.wikipedia.org/wiki/Melanie_Bush" title="Melanie Bush">Melanie Bush</a> (<a href="http://en.wikipedia.org/wiki/Bonnie_Langford" title="Bonnie Langford">Bonnie Langford</a>), a computer programmer who travelled with his <a href="http://en.wikipedia.org/wiki/Sixth_Doctor" title="Sixth Doctor">previous incarnation</a>, and who is soon succeeded by troubled teenager and explosives expert <a href="http://en.wikipedia.org/wiki/Ace_(Doctor_Who)" title="Ace (Doctor Who)">Ace</a> (<a href="http://en.wikipedia.org/wiki/Sophie_Aldred" title="Sophie Aldred">Sophie Aldred</a>), who becomes his <a href="http://en.wikipedia.org/wiki/Prot%C3%A9g%C3%A9e" title="Protégée">protégée</a>.</p>
+					<p>The Seventh Doctor is the seventh incarnation of the protagonist of the long-running BBC television science fiction seriesDoctor Who. He was portrayed by the actor Sylvester McCoy.</p>
+					<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
+					<p>McCoy portrays the seventh such incarnation, a whimsical, thoughtful character who quickly becomes more layered, secretive, and manipulative. His first companion was Melanie Bush (Bonnie Langford), a computer programmer who travelled with his previous incarnation, and who is soon succeeded by troubled teenager and explosives expert Ace (Sophie Aldred), who becomes his protégée.</p>
 				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
