--- a/website/companions/jack-harkness.html
+++ b/website/companions/jack-harkness.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -49,7 +50,11 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>Captain Jack Harkness is a fictional character played by John Barrowman in Doctor Who and its spin-off series,Torchwood. He first appeared in the 2005 Doctor Who episode &quot;The Empty Child&quot; and reappeared in the remaining episodes of the 2005 series as a companion of the ninth incarnation of the series' protagonist the Doctor. </p>
+					<p>Jack became the central character in the adult-themed Torchwood, and returned in the 2007 series of Doctor Who, reuniting with thetenth incarnation of the Doctor, and again for the 2008 series and a 2010 special.</p>
+					<p>In the program's narrative, Jack begins as a time traveler and former con man from the 51st century. In contrast to the Doctor, Jack is a man of action, more willing to apply a hands-on solution to a problem. As a consequence of his death and resurrection in the 2005 series finale of Doctor Who, the character gains immortality. On Earth, Jack becomes a member of Torchwood, a British organization dedicated to combating alien threats, becoming its leader over a century later. An ambiguous backstory is gradually revealed in the course of both series, adding another layer of complexity to the character.</p>
+				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
