--- a/website/companions/rory-williams.html
+++ b/website/companions/rory-williams.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -49,7 +50,11 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>Rory Arthur Williams is a fictional character portrayed by Arthur Darvill in the long-running British science fiction television series Doctor Who.</p>
+					<p>Having been introduced at the start of the 5th series, Rory joins the Eleventh Doctor(Matt Smith) as a companion in the middle of Series 5.[2][3][4] As Amy Pond's fiancé, Rory is initially insecure because he believes Amy secretly loves the Doctor more. Later, however, he proves to be a hero in his own right and he and Amy marry. The couple conceive a daughter aboard the Doctor's time machine, the TARDIS, while in the time vortex, but their baby is kidnapped at birth.</p>
+					<p>In &quot;A Good Man Goes to War&quot;, Rory and Amy discover their time-traveler friendRiver Song is actually their daughter Melody Pond. The Doctor and River marry in &quot;The Wedding of River Song&quot;, and Rory becomes the Doctor's father-in-law. In &quot;The Angels Take Manhattan&quot;, the fifth episode of the seventh series, he and Amy are transported back in time by a Weeping Angel, leading to the couple's departure from the series.</p>
+				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
