--- a/website/index.html
+++ b/website/index.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -21,28 +22,7 @@
 				<td colspan="2">[Banner]</td>
 			</tr>
 			<tr>
-				<td height="673">
-					<table width="152">
-						<tr>
-							<td><a href="villains/daleks.html">Daleks</a></td>
-						</tr>
-						<tr>
-							<td><a href="villains/cybermen.html">Cybermen</a></td>
-						</tr>
-						<tr>
-							<td><a href="villains/the-master.html">The Master</a></td>
-						</tr>
-						<tr>
-							<td><a href="villains/lady-cassandra.html">Lady Cassandra</a></td>
-						</tr>
-						<tr>
-							<td><a href="villains/davros.html">Davros</a></td>
-						</tr>
-						<tr>
-							<td><a href="villains/weeping-angels.html">Weeping Angels</a></td>
-						</tr>
-					</table>
-					 </td>
+				<td height="673"> </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
