--- a/website/the-doctors/index.html
+++ b/website/the-doctors/index.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -60,27 +61,6 @@
 							<td>
 								<p><a href="the-twelfth-doctor.html">The Twelfth Doctor</a></p>
 							</td>
-						</tr>
-					</table>
-					
-					<table width="152">
-						<tr>
-							<td><a href="../villains/daleks.html">Daleks</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/cybermen.html">Cybermen</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/the-master.html">The Master</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/lady-cassandra.html">Lady Cassandra</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/davros.html">Davros</a></td>
-						</tr>
-						<tr>
-							<td><a href="../villains/weeping-angels.html">Weeping Angels</a></td>
 						</tr>
 					</table>
 					 </td>
