--- a/website/the-doctors/the-eleventh-doctor.html
+++ b/website/the-doctors/the-eleventh-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,9 +65,9 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-					<p>The <strong>Eleventh Doctor</strong> is the eleventh <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He is played by <a href="http://en.wikipedia.org/wiki/Matt_Smith_(actor)" title="Matt Smith (actor)">Matt Smith</a>,<a href="http://en.wikipedia.org/wiki/Eleventh_Doctor#cite_note-young-9">[9]</a> who appears in three series as well as seven specials, over a four-year period. </p>
-					<p>Within the series' narrative, the Doctor is a centuries-old alien, a <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a>, who <a href="http://en.wikipedia.org/wiki/Time_travel_in_fiction" title="Time travel in fiction">travels in time</a>and space in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
-					<p>Smith portrays the eleventh such incarnation, a quick-tempered but compassionate man whose youthful appearance is at odds with his more discerning and world-weary temperament. His main companions included feisty Scot <a href="http://en.wikipedia.org/wiki/Amy_Pond" title="Amy Pond">Amy Pond</a> (<a href="http://en.wikipedia.org/wiki/Karen_Gillan" title="Karen Gillan">Karen Gillan</a>), her husband <a href="http://en.wikipedia.org/wiki/Rory_Williams" title="Rory Williams">Rory Williams</a> (<a href="http://en.wikipedia.org/wiki/Arthur_Darvill" title="Arthur Darvill">Arthur Darvill</a>) and the mysterious <a href="http://en.wikipedia.org/wiki/Clara_Oswald" title="Clara Oswald">Clara Oswald</a> (<a href="http://en.wikipedia.org/wiki/Jenna-Louise_Coleman" title="Jenna-Louise Coleman">Jenna-Louise Coleman</a>). </p>
+					<p>The Eleventh Doctor is the eleventh incarnation of the protagonist of the BBC television science fiction series Doctor Who. He is played by Matt Smith,[9] who appears in three series as well as seven specials, over a four-year period. </p>
+					<p>Within the series' narrative, the Doctor is a centuries-old alien, a Time Lord from the planet Gallifrey, who travels in timeand space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
+					<p>Smith portrays the eleventh such incarnation, a quick-tempered but compassionate man whose youthful appearance is at odds with his more discerning and world-weary temperament. His main companions included feisty Scot Amy Pond (Karen Gillan), her husband Rory Williams (Arthur Darvill) and the mysterious Clara Oswald (Jenna-Louise Coleman).  </p>
 				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
