--- a/website/the-doctors/the-first-doctor.html
+++ b/website/the-doctors/the-first-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,10 +65,11 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-    	<p>The <strong>First Doctor</strong> is the initial <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by the actor <a href="http://en.wikipedia.org/wiki/William_Hartnell" title="William Hartnell">William Hartnell</a> from 1963 to 1966.</p>
-    	<p>Within the series' narrative, the Doctor is a centuries-old alien <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who <a href="http://en.wikipedia.org/wiki/Time_travel_in_fiction" title="Time travel in fiction">travels in time</a> and space in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body; in doing so, his physical appearance and personality change.</p>
-    	<p>The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance, having grown old through a natural lifespan. </p>
-    <!-- InstanceEndEditable --></td>
+    	<p>The First Doctor is the initial incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by the actor William Hartnell from 1963 to 1966.</p>
+    	<p>Within the series' narrative, the Doctor is a centuries-old alien Time Lord from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change.</p>
+    	<p>The First Doctor is the youngest incarnation of the Doctor, but has the most aged physical appearance, having grown old through a natural lifespan. <br>
+    		</p>
+    			<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
