--- a/website/the-doctors/the-fourth-doctor.html
+++ b/website/the-doctors/the-fourth-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,10 +65,10 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-    	<p>The <strong>Fourth Doctor</strong> is the fourth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation of the protagonist</a> of the long-running BBC <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a>series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by <a href="http://en.wikipedia.org/wiki/Tom_Baker" title="Tom Baker">Tom Baker</a> for seven consecutive seasons and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series.</p>
-    	<p>Within the series' narrative, the Doctor is a centuries-old <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> alien from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who travels in time and space in his <a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with <a href="http://en.wikipedia.org/wiki/Companion_(Doctor_Who)" title="Companion (Doctor Who)">companions</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body, changing his physical appearance and personality in the process.</p>
+    	<p>The Fourth Doctor is the fourth incarnation of the protagonist of the long-running BBC television science fictionseries Doctor Who. He was portrayed by Tom Baker for seven consecutive seasons and remains the longest-lived incarnation of the Doctor in the show's on-screen history, counting both the classic and modern series.</p>
+    	<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in his TARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body, changing his physical appearance and personality in the process.</p>
     	<p>Baker portrays the fourth such incarnation, a whimsical and sometimes brooding individual whose enormous personal warmth is at times tempered by his capacity for righteous anger. </p>
-    <!-- InstanceEndEditable --></td>
+    			<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
