--- a/website/the-doctors/the-ninth-doctor.html
+++ b/website/the-doctors/the-ninth-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,9 +65,10 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-					<p>The <strong>Ninth Doctor</strong> is the ninth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. </p>
-					<p>He is portrayed by <a href="http://en.wikipedia.org/wiki/Christopher_Eccleston" title="Christopher Eccleston">Christopher Eccleston</a> during the <a href="http://en.wikipedia.org/wiki/Doctor_Who_(series_1)" title="Doctor Who (series 1)">first series</a> of the show's revival in 2005. Within the series' narrative, the Doctor is a <a href="http://en.wikipedia.org/wiki/Time_travel" title="Time travel">time travelling</a>, <a href="http://en.wikipedia.org/wiki/Humanoid" title="Humanoid">humanoid</a> <a href="http://en.wikipedia.org/wiki/Extraterrestrial_life" title="Extraterrestrial life">alien</a> from a race known as the <a href="http://en.wikipedia.org/wiki/Time_Lords" title="Time Lords">Time Lords</a>. When the Doctor is critically injured, he can <a href="http://en.wikipedia.org/wiki/Regeneration_(Doctor_Who)" title="Regeneration (Doctor Who)">regenerate</a> his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
-					<p>he production team's approach to the character and Eccleston's portrayal were highlighted as being intentionally different from his predecessors, with Eccleston stating that his character would be less eccentric. To fit in with a 21st-century audience, the Doctor was given a primary companion who was designed to be as independent and courageous as himself in the form of <a href="http://en.wikipedia.org/wiki/Rose_Tyler" title="Rose Tyler">Rose Tyler</a>. He also briefly travels with <a href="http://en.wikipedia.org/wiki/Adam_Mitchell_(Doctor_Who)" title="Adam Mitchell (Doctor Who)">Adam Mitchell</a>, a self-serving boy genius who acts as a foil to the companions and ultimately proves unworthy, and <a href="http://en.wikipedia.org/wiki/Jack_Harkness" title="Jack Harkness">Jack Harkness</a>, a reformed con-man from the 51st Century.<br>
+					<p>The Ninth Doctor is the ninth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. </p>
+					<p>He is portrayed by Christopher Eccleston during the first series of the show's revival in 2005. Within the series' narrative, the Doctor is a time travelling, humanoid alien from a race known as the Time Lords. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
+					<p>he production team's approach to the character and Eccleston's portrayal were highlighted as being intentionally different from his predecessors, with Eccleston stating that his character would be less eccentric. To fit in with a 21st-century audience, the Doctor was given a primary companion who was designed to be as independent and courageous as himself in the form of Rose Tyler. He also briefly travels with Adam Mitchell, a self-serving boy genius who acts as a foil to the companions and ultimately proves unworthy, and Jack Harkness, a reformed con-man from the 51st Century.</p>
+					<p><br>
 					</p>
 				<!-- InstanceEndEditable --></td>
 			</tr>
