--- a/website/the-doctors/the-sixth-doctor.html
+++ b/website/the-doctors/the-sixth-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -64,10 +65,10 @@
 					</table>
 					 </td>
 				<td><!-- InstanceBeginEditable name="Content Area" -->
-    	<p>The <strong>Sixth Doctor</strong> is the sixth <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)#Changing_faces" title="Doctor (Doctor Who)">incarnation</a> of the <a href="http://en.wikipedia.org/wiki/Doctor_(Doctor_Who)" title="Doctor (Doctor Who)">protagonist</a> of the long-running <a href="http://en.wikipedia.org/wiki/BBC" title="BBC">BBC</a> <a href="http://en.wikipedia.org/wiki/Science_fiction_on_television" title="Science fiction on television">television science fiction</a> series <em><a href="http://en.wikipedia.org/wiki/Doctor_Who" title="Doctor Who">Doctor Who</a></em>. He was portrayed by <a href="http://en.wikipedia.org/wiki/Colin_Baker" title="Colin Baker">Colin Baker</a>.</p>
-    	<p>The Sixth Doctor appeared in three seasons. His appearance in the first of these was at the end of the final episode of <em><a href="http://en.wikipedia.org/wiki/The_Caves_of_Androzani" title="The Caves of Androzani">The Caves of Androzani</a></em> which featured the regeneration from the <a href="http://en.wikipedia.org/wiki/Fifth_Doctor" title="Fifth Doctor">Fifth Doctor</a> and thereafter in the following serial <em><a href="http://en.wikipedia.org/wiki/The_Twin_Dilemma" title="The Twin Dilemma">The Twin Dilemma</a></em>, the end of that season.</p>
-    	<p>Within the series' narrative, the Doctor is a centuries-old <a href="http://en.wikipedia.org/wiki/Time_Lord" title="Time Lord">Time Lord</a> alien from the planet <a href="http://en.wikipedia.org/wiki/Gallifrey" title="Gallifrey">Gallifrey</a> who travels in time and space in his<a href="http://en.wikipedia.org/wiki/TARDIS" title="TARDIS">TARDIS</a>, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. </p>
-    <!-- InstanceEndEditable --></td>
+    	<p>The Sixth Doctor is the sixth incarnation of the protagonist of the long-running BBC television science fiction series Doctor Who. He was portrayed by Colin Baker.</p>
+    	<p>The Sixth Doctor appeared in three seasons. His appearance in the first of these was at the end of the final episode of The Caves of Androzani which featured the regeneration from the Fifth Doctor and thereafter in the following serial The Twin Dilemma, the end of that season.</p>
+    	<p>Within the series' narrative, the Doctor is a centuries-old Time Lord alien from the planet Gallifrey who travels in time and space in hisTARDIS, frequently with companions. When the Doctor is critically injured, he can regenerate his body; in doing so, his physical appearance and personality change. </p>
+    			<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
