--- a/website/the-doctors/the-twelfth-doctor.html
+++ b/website/the-doctors/the-twelfth-doctor.html
@@ -10,6 +10,7 @@
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="true" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="false" -->
 	</head>
 	
 	<body>
@@ -63,7 +64,11 @@
 						</tr>
 					</table>
 					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>The Twelfth Doctor is to be the twelfth incarnation of the protagonist of the long-running BBC television science fictionseries Doctor Who.</p>
+					<p>He is to be portrayed by Peter Capaldi[1] following the departure of Matt Smith's incarnation in the 2013 Christmas special.[2] Within the series' narrative, the Doctor is a time travelling, humanoid alien from a race known as theTime Lords. When the Doctor is critically injured, he can regenerate his body but in doing so gains a new physical appearance and with it, a distinct new personality.</p>
+					<p>Capaldi will make his first appearance as the Doctor in the 2013 Christmas special episode.[3] He will be accompanied in the eighth series by incumbent companion Clara Oswald (Jenna Coleman).</p>
+				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
