--- a/website/villains/davros.html
+++ b/website/villains/davros.html
@@ -9,7 +9,8 @@
 	<!-- InstanceEndEditable -->
 		<!-- InstanceParam name="The Doctor Secondary Menu" type="boolean" value="false" -->
 		<!-- InstanceParam name="Companions Secondary Menu" type="boolean" value="false" -->
-		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="true" -->
+		<!-- InstanceParam name="Villians Secondary Menu" type="boolean" value="false" -->
+		<!-- InstanceParam name="Villains Secondary Menu" type="boolean" value="true" -->
 	</head>
 	
 	<body>
@@ -42,8 +43,12 @@
 							<td><a href="weeping-angels.html">Weeping Angels</a></td>
 						</tr>
 					</table>
-					 </td>
-				<td><!-- InstanceBeginEditable name="Content Area" -->[Content]<!-- InstanceEndEditable --></td>
+			    </td>
+				<td><!-- InstanceBeginEditable name="Content Area" -->
+					<p>Davros is a character from the long-running British science fiction television series Doctor Who. Davros is anarchenemy of the Doctor and is the creator of the Doctor's deadliest enemies, the Daleks. Davros was created by screenwriter Terry Nation.</p>
+					<p>Davros is a scientist from the planet Skaro whose people, the Kaleds, were engaged in a bitter thousand-year war of attrition with their enemies, the Thals. He is horribly scarred and crippled, a condition various spin-off media attribute to his laboratory being attacked by a Thal shell. He has one functioning hand and one cybernetic eye mounted on his forehead to take the place of his real eyes, which appear to have been welded shut; for much of his existence he depends completely upon a self-designed mobile life-support chair which encloses the lower half of his body. </p>
+					<p>Davros is a megalomaniac who believes that through his creations, the Daleks, he can become the supreme being and ruler of the universe. He is a brilliant, ruthless scientist who has demonstrated mastery of robotics, mechatronics,metallurgy, chemistry, artificial intelligence, cloning, genetic engineering, biology, physics, astronomy, earth science,military tactics, cybernetics and mechanical engineering</p>
+				<!-- InstanceEndEditable --></td>
 			</tr>
 		</table>
 	</body>
